--- a/server/package.json
+++ b/server/package.json
@@ -1,12 +1,17 @@
 {
-  "name": "server",
+  "name": "ws-1",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node .",
+    "dev-server": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "nodemon": "^3.0.3",
+    "ws": "^8.16.0"
+  }
 }
